# Embedded_2025

./: CMakeLists.txt  README.md
boards/: CMakeLists.txt
boards/DJI_Board_TypeC/: .mxproject  CMakeLists.txt  DJI_Board_TypeC.ioc  STM32F407XX_FLASH.ld
boards/DJI_Board_TypeC/Core/Inc/: dma.h  main.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
boards/DJI_Board_TypeC/Core/Src/: can.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  stm32f4xx_it.c  tim.c  usart.c
boards/DJI_Board_TypeC/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
boards/DJI_Board_TypeC/cmake/: gcc-arm-none-eabi.cmake
boards/DJI_Board_TypeC/cmake/stm32cubemx/: CMakeLists.txt
cmake/: arm_toolchain.cmake  build_helper.cmake
examples/: CMakeLists.txt
examples/buzzer/: CMakeLists.txt  main.cc
examples/imu/: CMakeLists.txt  typeC.cc
examples/led/: CMakeLists.txt  main.cc
examples/oled/: CMakeLists.txt  main.cc
examples/sbus/: CMakeLists.txt  main.cc
examples/test/: CMakeLists.txt  drone_2006.cc  drone_3508.cc  drone_actuator.cc
examples/uart/: CMakeLists.txt  main.cc
examples/usb/: CMakeLists.txt  main.cc
robot/: CMakeLists.txt
robot/drone/: CMakeLists.txt  main.cc  main_.cc  main__.cc
robot/drone/common/: control_modes.h  task_config.h
robot/drone/controllers/: communication_controller.cc  communication_controller.h  imu_controller.cc  imu_controller.h  led_controller.cc  led_controller.h  self_test_controller.cc  self_test_controller.h  suction_controller.cc  suction_controller.h  system_state_manager.cc  system_state_manager.h  transform_controller.cc  transform_controller.h  vehicle_controller.cc  vehicle_controller.h
scripts/: cmake_clean_script.py
shared/: CMakeLists.txt
shared/bsp/: bsp_imu.cc  bsp_imu.h  bsp_os.cc  bsp_usb.cc
shared/libraries/: minipc_protocol.cc  minipc_protocol.h
